add name to the link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 	<h1>Hello World, I am kevin's first website!</h1>
-	<a href="/html-elements.html"></a>
+	<a href="/html-elements.html">Elements</a>
 </body>
 </html>
