--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
 	<h1>Hello World, I am kevin's first website!</h1>
 	<a href="/html-elements.html">Elements</a>
+	<a href="/style-html.html">Style</a>
 </body>
 </html>
