--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 <body>
 	<h1>Hello World, I am kevin's first website!</h1>
-	<a href="/html-elements.html">Elements</a>
-	<a href="/style-html.html">Style</a>
+	<ul>
+		<li><a href="/html-elements.html">Elements</a></li>
+		<li><a href="/style-html.html">Style</a></li>
+		<li><<a href="/style2-html.html">Style 2</a>/li>
+	</ul>
+	
+	
 </body>
 </html>
