--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 	<ul>
 		<li><a href="/html-elements.html">Elements</a></li>
 		<li><a href="/style-html.html">Style</a></li>
-		<li><<a href="/style2-html.html">Style 2</a>/li>
+		<li><a href="/style2-html.html">Style 2</a></li>
 	</ul>
-	
-	
 </body>
 </html>
