--- a/html-elements.html
+++ b/html-elements.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+<a href="/index.html">home</a>
   <nav>
     <a href="./index.html">Brown Bear</a>
     <a href="./aboutme.html">About Me</a>
