--- a/style-html.html
+++ b/style-html.html
@@ -6,6 +6,7 @@
   <link href="style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+  <a href="/index.html">home</a>
   <img src="https://content.codecademy.com/courses/freelance-1/unit-2/explorer.jpeg" />
   <h1 class="title uppercase">Top Vacation Spots</h1>
   <h5>By: Stacy Gray</h5>
