--- a/style2-html.html
+++ b/style2-html.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a href="/index.html">home</a>
 
   <div class="content">
     <img src="https://content.codecademy.com/courses/web-101/unit-4/htmlcss1-img_writer-avatar.jpg" class="writer-img">
