add style4 page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <body>
 	<h1>Hello World, I am kevin's first website!</h1>
-	<ul>
+	<nav>
 		<li><a href="/html-elements.html">Elements</a></li>
 		<li><a href="/style-html.html">Style</a></li>
 		<li><a href="/style2-html.html">Style 2</a></li>
 		<li><a href="/style3-html.html">Style 3</a></li>
-	</ul>
+		<li><a href="/style4-html.html">Style 4</a></li>
+	</nav>
 </body>
 </html>
