link home to style4

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
+<head>
+	<link rel="stylesheet" type="text/css" href="style4.css">
+</head>
 <body>
 	<h1>Hello World, I am kevin's first website!</h1>
-	<nav>
+	<nav class="navigator">
 		<li><a href="/html-elements.html">Elements</a></li>
 		<li><a href="/style-html.html">Style</a></li>
 		<li><a href="/style2-html.html">Style 2</a></li>
