--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<h1>Hello World, I am kevin's first website!</h1>
-	<nav class="navigator">
+	<nav class="actions">
 		<li><a href="/html-elements.html">Elements</a></li>
 		<li><a href="/style-html.html">Style</a></li>
 		<li><a href="/style2-html.html">Style 2</a></li>
