edit home links

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 </head>
 <body>
 	<h1>Hello World, I am kevin's first website!</h1>
-	<nav class="actions">
-		<li><a href="/html-elements.html">Elements</a></li>
-		<li><a href="/style-html.html">Style</a></li>
-		<li><a href="/style2-html.html">Style 2</a></li>
-		<li><a href="/style3-html.html">Style 3</a></li>
-		<li><a href="/style4-html.html">Style 4</a></li>
-	</nav>
+	<div class="actions">
+		<a href="/html-elements.html">Elements</a>
+		<a href="/style-html.html">Style</a>
+		<a href="/style2-html.html">Style 2</a>
+		<a href="/style3-html.html">Style 3</a>
+		<a href="/style4-html.html">Style 4</a>
+	</div>
 </body>
 </html>
