--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
 	<h1>Hello World, I am kevin's first website!</h1>
 	<div class="actions">
+		<a href="/dixit">Dixit</a>
 		<a href="/html-elements.html">Elements</a>
 		<a href="/style-html.html">Style</a>
 		<a href="/style2-html.html">Style 2</a>
