--- a/pages/style2-html.html
+++ b/pages/style2-html.html
@@ -4,7 +4,7 @@
 <head>
   <title>The Rise of Soccer in The US</title>
 
-  <link href="style2.css" type="text/css" rel="stylesheet">
+  <link href="../css/style2.css" type="text/css" rel="stylesheet">
   <!-- <link href="style-library.css" type="text/css" rel="stylesheet"> -->
 </head>
 
