edit pages path on home page

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<h1>Hello World, I am kevin's first website!</h1>
 	<div class="actions">
 		<a href="/dixit">Dixit</a>
-		<a href="/html-elements.html">Elements</a>
-		<a href="/style-html.html">Style</a>
-		<a href="/style2-html.html">Style 2</a>
-		<a href="/style3-html.html">Style 3</a>
-		<a href="/style4-html.html">Style 4</a>
+		<a href="/pages/html-elements.html">Elements</a>
+		<a href="/pages/style-html.html">Style</a>
+		<a href="/pages/style2-html.html">Style 2</a>
+		<a href="/pages/style3-html.html">Style 3</a>
+		<a href="/pages/style4-html.html">Style 4</a>
 	</div>
 </body>
 </html>
