--- a/dixit/index.html
+++ b/dixit/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Dixit - Melhor jogo de tabuleiro do mundo eleito em 2010</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style3.css">
+  <link rel="stylesheet" type="text/css" href="../css/style3.css">
 </head>
 <body>
   <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=BR&source=ac&ref=tf_til&ad_type=product_link&tracking_id=kevinteodoro-20&marketplace=amazon&amp;region=BR&placement=B07CLHRLPW&asins=B07CLHRLPW&linkId=4aa0b7c4b7fb48aac703e941731e1a61&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
